# rrc_simulation

./: .gitignore  CMakeLists.txt  README.md  conda_activate_rrc_simulation.sh  environment.yml  package.xml  setup.py  update_robot_properties.sh
demos/: demo_cameras.py  demo_control.py  demo_plain_torque_control.py  demo_random_policy.py  demo_trifinger_platform.py
demos/catkin/: demo_object_tracker.py  demo_robot_interface.py
example/: evaluate_policy.py  example_pushing_training_env.py  test.py  train_pushing_ppo.py  view_pushing_ppo.py
include/rrc_simulation/: pybullet_driver.hpp
python/rrc_simulation/: __init__.py  action.py  camera.py  collision_objects.py  finger_types_data.py  observation.py  pinocchio_utils.py  sample.py  sim_finger.py  trifinger_platform.py  visual_objects.py
python/rrc_simulation/gym_wrapper/: __init__.py  finger_spaces.py  utils.py
python/rrc_simulation/gym_wrapper/envs/: cube_env.py
python/rrc_simulation/robot_properties_fingers/urdf/: finger_with_stage.urdf  stage.urdf  trifinger.urdf  trifinger_stage.urdf
python/rrc_simulation/robot_properties_fingers/urdf/edu/: fingeredu.urdf
python/rrc_simulation/robot_properties_fingers/urdf/pro/: fingerpro.urdf  trifingerpro.urdf  trifingerpro_with_stage.urdf
python/rrc_simulation/tasks/: move_cube.py
scripts/: evaluate_policy.py  profiling.py  pybullet_backend.py  replay_action_log.py  rrc_evaluate  run_evaluate_policy_all_levels.py  run_replay_all_levels.py  train_pushing_ppo.py
srcpy/: drivers.cpp
tests/: test_cube_env.py  test_determinism.py  test_loading_urdfs.py  test_parallel_instances.py  test_reset_joints.py  test_robot_equivalent_interface.py  test_sample.py  test_tasks_move_cube.py  test_trifinger_platform.py
tests/catkin/: test_pybullet_backend.cpp  test_pybullet_backend.py
