<?xml version="1.0"?>
<package format="2">
  <name>rrc_simulation</name>
  <version>1.0.2</version>
  <description>
      pyBullet simulation for the Finger, TriFinger and related robots.
  </description>

  <maintainer email="felix.widmaier@tue.mpg.de">Felix Widmaier</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>robot_interfaces</depend>
  <depend>eigen</depend>

  <build_depend>mpi_cmake_modules</build_depend>
  <build_depend>pybind11_catkin</build_depend>

  <exec_depend>robot_properties_fingers</exec_depend>

  <test_depend>rosunit</test_depend>
  <test_depend>robot_interfaces</test_depend>

  <export>
  </export>
</package>
